force-app/main/default/objects/Time_Entry__c/fields/Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billable_Amount__c</fullName>
    <description>Billable amount for this entry based on assignment rate.</description>
    <formula>Hours__c * Project_Assignment__r.Billing_Rate_Per_Hour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>