force-app/main/default/objects/Time_Entry__c/fields/Period_Label__c.field-meta.xml
<CustomField>
    <fullName>Period_Label__c</fullName>
    <description>Human-readable period label such as Week 1 of March 2026.</description>
    <formula>IF(TEXT(Period_Type__c) = &quot;Weekly&quot;, &quot;Week &quot; &amp; TEXT(CEILING(DAY(Entry_Date__c) / 7)) &amp; &quot; of &quot; &amp; CASE(MONTH(Entry_Date__c), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;, 4, &quot;April&quot;, 5, &quot;May&quot;, 6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;Unknown&quot;) &amp; &quot; &quot; &amp; TEXT(YEAR(Entry_Date__c)), CASE(MONTH(Entry_Date__c), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;, 4, &quot;April&quot;, 5, &quot;May&quot;, 6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;Unknown&quot;) &amp; &quot; &quot; &amp; TEXT(YEAR(Entry_Date__c)))</formula>
    <label>Period Label</label>
    <type>Text</type>
</CustomField>