force-app/main/default/objects/Time_Entry__c/fields/Period_Month_Number__c.field-meta.xml
<CustomField>
    <fullName>Period_Month_Number__c</fullName>
    <description>Month number based on Entry Date for reporting.</description>
    <formula>MONTH(Entry_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period Month Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>