force-app/main/default/objects/Time_Entry__c/fields/Period_Week_In_Month__c.field-meta.xml
<CustomField>
    <fullName>Period_Week_In_Month__c</fullName>
    <description>Week number inside month based on Entry Date.</description>
    <formula>CEILING(DAY(Entry_Date__c) / 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period Week In Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>