force-app/main/default/objects/Time_Entry__c/fields/Period_Year__c.field-meta.xml
<CustomField>
    <fullName>Period_Year__c</fullName>
    <description>Year based on Entry Date for reporting.</description>
    <formula>YEAR(Entry_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>