force-app/main/default/objects/Time_Entry__c/fields/Week_Key__c.field-meta.xml
<CustomField>
    <fullName>Week_Key__c</fullName>
    <description>Key used to group time entries by week.</description>
    <formula>TEXT(YEAR(Week_Start_Date__c)) &amp; &quot;-W&quot; &amp; LPAD(TEXT(CEILING((Week_Start_Date__c - DATE(YEAR(Week_Start_Date__c), 1, 1) + 1) / 7)), 2, &quot;0&quot;)</formula>
    <label>Week Key</label>
    <type>Text</type>
</CustomField>