force-app/main/default/objects/Time_Entry__c/fields/Week_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Week_Start_Date__c</fullName>
    <description>Monday date for the week of the entry date.</description>
    <formula>Entry_Date__c - MOD(Entry_Date__c - DATE(1900, 1, 8), 7)</formula>
    <label>Week Start Date</label>
    <type>Date</type>
</CustomField>